templates have been updated

--- a/app/templates/deck.html
+++ b/app/templates/deck.html
@@ -1,8 +1,9 @@
 <html>
+
 <head>
-    <title>Item Details</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <title>Deck</title>
 </head>
+
 <body>
    <h1>Decklist:</h1>
    <p>
@@ -17,4 +18,5 @@
    {% endfor %}
    </p>
 </body>
+
 </html>
