adde the href urls

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,8 @@
             <li>Profit!</li>
         </ol>
 
-        <h1>Doing the sealed (technical) video walk through posted on Facebook and the discord channel</h1>
+        <h1>Doing the sealed (technical)</h1>
+        Video walk through posted (<A href="https://youtu.be/9cPMDzPMNtI">https://youtu.be/9cPMDzPMNtI</A>)
         <ol>
             <li>Enable verbose logging in MTGA</li>
             <li>Sign into MTGA</li>
@@ -40,8 +41,8 @@
             <li>Sign out and back into MTGA</li>
             <li>Open <strong>only</strong> your 12 packs for the sealed draft (screen capturing in case something goes wrong) <strong>Do not use your wildcards</strong>, the website will display a total count by rarity. Close MTGA.</li>
             <li>Locate the player log file that is typically found at C:\Users\%username%\AppData\LocalLow\Wizards Of The Coast\MTGA\Player.log</li>
-            <li>Upload the the log file to https:\\mtga.artificialeloquence.com</li>
-            <li>Copy the "Decklist" and paste it into your favorite deck builder, for example, manavault.com</li>
+            <li>Upload the the log file to <A href="https:\\mtga.artificialeloquence.com">https:\\mtga.artificialeloquence.com</A></li>
+            <li>Copy the "Decklist" and paste it into your favorite deck builder, for example, <A href="https://manastack.com">https://manastack.com/</A></li>
             <li>After building your 40 card deck, export the decklist and upload it into MTGA through your clipboard. This can be done in MTGA through Collection\+\import from clipboard.</li>
             <li>Profit!</li>
         </ol>
