--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
         you will need to purchase 12 packs of Ikoria. In a paper Magic sealed, sealed you get 6 packs with each pack containing
         15 cards for a total of a 90 card pool. In MTGA, you get only 8 cards per pack, so we will be opening 12 packs for a total
         of 96 cards in your pool of available cards. You will also get 12 rares and 24 uncommons, which will increase the power
-        level of your deck substantially. Furthremore, there are wild cards in MTGA. For our purposes, the best option for wild cards
+        level of your deck substantially. Furthermore, there are wild cards in MTGA. For our purposes, the best option for wild cards
         is to let you use them as you see fit. The other options weren't as much fun. May the odds ever be in your favor for opening
          many Mythic wildcards.
         </p>
