updated with the swiss tournament schedule

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
         <h1>General Instructions:</h1>
         <p>
             There are two options for sealed on MTGA since there isn't an in-house official sealed offering yet. For both options,
-        you will need to purchase 12 packs of Ikoria. In a paper Magic sealed, sealed you get 6 packs with each pack containing
+        you will need to purchase 12 packs of Ikoria. In a paper Magic sealed you get 6 packs with each pack containing
         15 cards for a total of a 90 card pool. In MTGA, you get only 8 cards per pack, so we will be opening 12 packs for a total
         of 96 cards in your pool of available cards. You will also get 12 rares and 24 uncommons, which will increase the power
         level of your deck substantially. Furthermore, there are wild cards in MTGA. For our purposes, the best option for wild cards
@@ -21,7 +21,7 @@
             There is no option in MTGA to show you only recently opened cards in your collection. For that reason, we are specifying the
          sealed procedure here. There is a technical and non-technical version of keeping track of your booster cards. We are using
          the honor system and you will forever be hated and laughed at if you cheat. Finally, we will be challenging each other directly
-         with the built in systems. Make sure to tell us your username in the discord channel.
+         with the built in systems. Make sure to tell us your username in the discord channel. The format will be a Swiss tournament.
         </p>
 
         <h1>Doing the sealed (non-technical)</h1>
